feat: swagger documentation concluded
