# src/swagger.json
@@ -181,6 +181,211 @@
                 }
               }
             }
+          },
+          "500": {
+            "description": "Erro interno do servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "error"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Internal server error"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/mensagens": {
+      "post": {
+        "tags": ["Mensagem"],
+        "summary": "Gravar log de mensagem",
+        "description": "Gravar log de mensagem enviada pela Clara no EQTLINFO",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "empresaOperadora",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "enum": [
+                82,
+                86,
+                95,
+                98
+              ],
+              "example": 98
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "canal": {
+                    "type": "string",
+                    "required": true,
+                    "example": "whatsapp"
+                  },
+                  "sessao": {
+                    "type": "string",
+                    "format": "uuid"
+                  },
+                  "telefone": {
+                    "type": "string",
+                    "required": true,
+                    "example": "9888888888"
+                  },
+                  "dataEnvio": {
+                    "type": "string",
+                    "required": true,
+                    "format": "date-time"
+                  },
+                  "idEnvio": {
+                    "type": "string",
+                    "required": true,
+                    "format": "uuid"
+                  },
+                  "mensagemEnviada": {
+                    "type": "string",
+                    "required": true,
+                    "example": "Mensagem de texto"
+                  },
+                  "tipoSolicitacao": {
+                    "type": "string",
+                    "example": "REJEICAO_LIGACAO_NOVA"
+                  },
+                  "codigoServico": {
+                    "type": "string",
+                    "example": "8023130941"
+                  },
+                  "codigoNota": {
+                    "type": "string",
+                    "example": "001234567898"
+                  },
+                  "contaContrato": {
+                    "type": "string",
+                    "required": true,
+                    "example": "000012345678"
+                  },
+                  "status": {
+                    "type": "string",
+                    "example": "IMPROCEDENTE"
+                  },
+                  "categoria": {
+                    "type": "string",
+                    "example": "PUSH",
+                    "enum": ["PUSH", "PUSH - ATIVO", "SERVICO", "SERVICO - ATIVO"]
+                  },
+                  "usuario": {
+                    "type": "string",
+                    "example": "SROBOTIZACAO"
+                  },
+                  "dataNota": {
+                    "type": "string",
+                    "format": "date-time"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Log registrado com sucesso"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Requisição Inválida",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "statusCode": {
+                      "type": "number",
+                      "example": 400
+                    },
+                    "error": {
+                      "type": "string",
+                      "example": "Bad Request"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Validation failed"
+                    },
+                    "validation": {
+                      "type": "object",
+                      "properties": {
+                        "query": {
+                          "type": "object",
+                          "properties": {
+                            "source": {
+                              "type": "string",
+                              "example": "query"
+                            },
+                            "keys": {
+                              "type": "array",
+                              "items": {
+                                "type": "string",
+                                "example": "empresaOperadora"
+                              }
+                            },
+                            "message": {
+                              "type": "string",
+                              "example": "\"empresaOperadora\" must be one of [82, 86, 95, 98]"
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro interno do servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "error"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Internal server error"
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
